
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int MAXSIZE ;
 int exit (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,unsigned int) ;
 int printf (char*) ;
 unsigned int strlen (char*) ;
 unsigned long strtoul (char*,int *,int) ;

void str2hex(char *hexstring, char *outbuff)
{
        unsigned long tmp=0;
        char tmpchr[5]="";
        memset(outbuff,0,strlen(outbuff));
        if(strlen(hexstring) % 2)
        {
                printf(" Incorrect password hash!\n");
                exit(1);
        }
        if(strlen(hexstring)>MAXSIZE)
        {
                printf(" Password hash is too long! \n");
                exit(1);
        }
        for(unsigned int i=0, c=0; i<strlen(hexstring); i+=2, c++)
        {
                memcpy(tmpchr,hexstring+i,2);
                tmp = strtoul(tmpchr,((void*)0),16);
                outbuff[c] = (char)tmp;
        }
}
