; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24374.c_str2hex.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24374.c_str2hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c" Incorrect password hash!\0A\00", align 1
@MAXSIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c" Password hash is too long! \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @str2hex(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca [5 x i8], align 1
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i64 0, i64* %5, align 8
  %9 = bitcast [5 x i8]* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %9, i8 0, i64 5, i1 false)
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = call i32 @memset(i8* %10, i32 0, i32 %12)
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = urem i32 %15, 2
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @exit(i32 1) #4
  unreachable

21:                                               ; preds = %2
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = load i32, i32* @MAXSIZE, align 4
  %25 = icmp ugt i32 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @exit(i32 1) #4
  unreachable

29:                                               ; preds = %21
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %30

30:                                               ; preds = %50, %29
  %31 = load i32, i32* %7, align 4
  %32 = load i8*, i8** %3, align 8
  %33 = call i32 @strlen(i8* %32)
  %34 = icmp ult i32 %31, %33
  br i1 %34, label %35, label %55

35:                                               ; preds = %30
  %36 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %37 = load i8*, i8** %3, align 8
  %38 = load i32, i32* %7, align 4
  %39 = zext i32 %38 to i64
  %40 = getelementptr inbounds i8, i8* %37, i64 %39
  %41 = call i32 @memcpy(i8* %36, i8* %40, i32 2)
  %42 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %43 = call i64 @strtoul(i8* %42, i32* null, i32 16)
  store i64 %43, i64* %5, align 8
  %44 = load i64, i64* %5, align 8
  %45 = trunc i64 %44 to i8
  %46 = load i8*, i8** %4, align 8
  %47 = load i32, i32* %8, align 4
  %48 = zext i32 %47 to i64
  %49 = getelementptr inbounds i8, i8* %46, i64 %48
  store i8 %45, i8* %49, align 1
  br label %50

50:                                               ; preds = %35
  %51 = load i32, i32* %7, align 4
  %52 = add i32 %51, 2
  store i32 %52, i32* %7, align 4
  %53 = load i32, i32* %8, align 4
  %54 = add i32 %53, 1
  store i32 %54, i32* %8, align 4
  br label %30

55:                                               ; preds = %30
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @printf(i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i64 @strtoul(i8*, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
